--- a/data/users.yml
+++ b/data/users.yml
@@ -2,3 +2,6 @@
   github_nickname: 'ssaunier'
 - name: 'Boris Paillard'
   github_nickname: 'Papillard'
+- name: 'admin'
+  facebook_nickname: "dronesdelcaribe"
+  instagram_nickname: "drones_del_caribe"
