Updates gemfile (replace font-awesome-middleman by font-awesome-sass and upgrade sprockets version). Adds new sections (drone spec and services), updates services section. Reorganise css. Adds new generic css styles. Updates gray scale used for sections

--- a/data/admin.yml
+++ b/data/admin.yml
@@ -1,2 +1,4 @@
-facebook_nickname: "dronesdelcaribe"
+name: "Drones Del Caribe"
+facebook_nickname: "Drones-del-Caribe-1922673971380696"
 instagram_nickname: "drones_del_caribe"
+email: contacto.dronesdelcaribe@gmail.com
