--- a/data/users.yml
+++ b/data/users.yml
@@ -1,7 +1,10 @@
-- name: 'Sébastien Saunier'
-  github_nickname: 'ssaunier'
-- name: 'Boris Paillard'
-  github_nickname: 'Papillard'
-- name: 'admin'
-  facebook_nickname: "dronesdelcaribe"
-  instagram_nickname: "drones_del_caribe"
+# TODO delete this
+# - name: 'Sébastien Saunier'
+#   github_nickname: 'ssaunier'
+# - name: 'Boris Paillard'
+#   github_nickname: 'Papillard'
+# - name: 'admin'
+#   facebook_nickname: "dronesdelcaribe"
+#   instagram_nickname: "drones_del_caribe"
+
+
